--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,22 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* ----------HEADER---------- */
+.header{
+  display:flex;
+  justify-content: space-between;
+  padding:1em 3em 1em 3em;
+  border:1px solid red;
+}
+
+.header a {
+  color:black;
+  text-decoration: none;
+  font-size:20px;
+}
+
+.header-right{
+  display:flex;
+  gap:1em;
+}
