--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,7 @@ body {
 .intro-panel{
   display:grid;
   grid-template-columns: 2fr 1fr;
- margin:auto;
+  margin:auto;
 }
 
 .intro-panel-right{
@@ -111,6 +111,9 @@ body {
 
 
  /* ---------- About Section ----------- */
+ .about{
+  margin-bottom: 5%;
+ }
 .about-title{
   font-size: 2.5em;
 }
@@ -118,6 +121,26 @@ body {
 .about-info{
   font-size: 1.5em;
   margin: 0 15% 5% 15%;
+}
+
+.skills{
+  display:grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.skill-type{
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.skills h3{
+  text-decoration: underline;
+}
+
+.skills p{
+  margin: -.005em;
+  padding: none;
 }
 
 
