--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body {
 .App{
   display:grid;
   grid-template-columns: 1fr;
-  grid-template-rows: .5fr 3fr 3fr .5fr;
+  grid-template-rows: .25fr 1.75fr 2fr .25fr;
 }
 
 /* ---------- HEADER ---------- */
@@ -35,7 +35,7 @@ body {
 }
 
 .header a {
-
+  color:var(--color-two);
   text-decoration: none;
   font-size:20px;
 }
@@ -55,10 +55,13 @@ body {
 
 .intro-panel-right{
   width:30em;
+  
+  align-self: center;
+
 }
 
 .intro{
-  font-family: 'Heebo';
+  
   font-style: normal;
   font-weight: 700;
   font-size: 44px;
@@ -72,7 +75,7 @@ body {
   left: 15%;
   top: 373px;
 
-  font-family: 'Heebo';
+  
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -91,7 +94,6 @@ body {
 
   border-radius: 10px;
 
-  font-family: 'Heebo';
   font-style: normal;
   font-weight: 500;
   font-size: 20px;
@@ -141,6 +143,11 @@ body {
   padding: none;
 }
 
+/* ----------CArousel---------- */
+
+.carousel{
+  height:400px;
+}
 
 
 
